--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ services:
 stages:
   - build
   - test
+  - deployS3
 
 variables:
   CONTAINER_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH:latest
@@ -27,3 +28,9 @@ test:
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
     - docker run --rm -e SURGE_LOGIN=$SURGE_LOGIN -e SURGE_TOKEN=$SURGE_TOKEN -e CI_BUILD_REPO=$CI_BUILD_REPO -e CI_BUILD_REF_NAME=$CI_BUILD_REF_NAME -v $PWD:/build -w /build $CONTAINER_IMAGE ./test.sh
+
+deployS3:
+    stage: deployS3
+    only: stable
+    script:
+        - ./deploy-s3.sh
