--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,4 +34,6 @@ deployS3:
     only:
         - stable
     script:
-        - ./deploy-s3.sh
+        - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+        - docker run --rm -e SURGE_LOGIN=$SURGE_LOGIN -e SURGE_TOKEN=$SURGE_TOKEN -e CI_BUILD_REPO=$CI_BUILD_REPO -e CI_BUILD_REF_NAME=$CI_BUILD_REF_NAME -v $PWD:/build -w /build $CONTAINER_IMAGE ./build.sh
+        - docker run --rm -e SURGE_LOGIN=$SURGE_LOGIN -e SURGE_TOKEN=$SURGE_TOKEN -e CI_BUILD_REPO=$CI_BUILD_REPO -e CI_BUILD_REF_NAME=$CI_BUILD_REF_NAME -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY -v $PWD:/build -w /build $CONTAINER_IMAGE ./deploy-s3.sh
